# django-deepface-demo

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  django-deepface-demo.code-workspace  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  helm-values.yaml  manage.py  nginx.conf  production.env.example  pyproject.toml  pytest.ini  requirements.txt  urls.py  views.py  wsgi.py
dftest/: asgi.py  settings.py  urls.py  views.py  wsgi.py
dftest/tests/: __init__.py  conftest.py  test_deepface_suite.py  test_urls.py
django_deepface_demo/: __init__.py  admin.py  apps.py  forms.py  models.py  settings.py  signals.py  urls.py  views.py
django_deepface_demo/migrations/: 0001_initial.py  0002_alter_capturedevice_browser_and_more.py  0003_capturedevice_browser_version_and_more.py  0004_capturedevice_stage.py
django_deepface_demo/templates/django_deepface_demo/: base.html  device_stats.html  index.html  register.html
django_deepface_demo/templatetags/: version_tags.py
django_deepface_demo/tests/: __init__.py  conftest.py  test_deepface_suite.py  test_signals.py  test_urls.py
helm/django-deepface-demo/: Chart.yaml  README.md  values.yaml
helm/django-deepface-demo/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  postgresql.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
