[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-deepface-demo"
version = "0.1.0"
description = "A Django application demonstrating face recognition authentication"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.11"
dependencies = [
    "django==5.2.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "dj-database-url==2.3.0",
    "device-detector==5.0.1",
    "django-deepface==0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest-django",
    "pytest-cov",
]
prod = [
    "gunicorn==23.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_deepface_demo.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--verbose",
    "--showlocals",
    "--tb=short",
    "--strict-markers",
    "--durations=10",
    "--cov=django_deepface",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--no-cov-on-fail",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]